// Original file: src/protos/5/type-identification.proto


export interface TypeIdentification {
  'id'?: (string);
  'typeIdentificationDescription'?: (string);
  'typeIdentificationCode'?: (string);
}

export interface TypeIdentification__Output {
  'id': (string);
  'typeIdentificationDescription': (string);
  'typeIdentificationCode': (string);
}
